[gd_scene load_steps=12 format=2]

[ext_resource path="res://common/dash/dash.gd" type="Script" id=1]
[ext_resource path="res://common/dash/dust.png" type="Texture" id=2]

[sub_resource type="CanvasItemMaterial" id=1]
particles_animation = true
particles_anim_h_frames = 5
particles_anim_v_frames = 1
particles_anim_loop = false

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 0 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=3]
curve = SubResource( 2 )

[sub_resource type="Gradient" id=4]
offsets = PoolRealArray( 0.438953, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.0980392 )

[sub_resource type="GradientTexture" id=5]
gradient = SubResource( 4 )

[sub_resource type="ParticlesMaterial" id=6]
lifetime_randomness = 0.7
flag_disable_z = true
gravity = Vector3( 0, 0, 0 )
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 0.15
scale = 0.8
scale_random = 1.0
color_ramp = SubResource( 5 )
anim_speed_curve = SubResource( 3 )

[sub_resource type="Gradient" id=7]
offsets = PoolRealArray( 0.456395, 1 )
colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0.0980392 )

[sub_resource type="GradientTexture" id=8]
gradient = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.7
emission_shape = 1
emission_sphere_radius = 5.0
flag_disable_z = true
spread = 40.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 40.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 360.0
angle_random = 0.15
scale = 1.3
scale_random = 1.0
color_ramp = SubResource( 8 )
anim_speed_curve = SubResource( 3 )

[node name="Dash" type="Node2D"]
script = ExtResource( 1 )

[node name="DurationTimer" type="Timer" parent="."]
one_shot = true

[node name="GhostTimer" type="Timer" parent="."]
wait_time = 0.03

[node name="DustTrail" type="Particles2D" parent="."]
material = SubResource( 1 )
emitting = false
lifetime = 1.2
one_shot = true
explosiveness = 0.8
local_coords = false
process_material = SubResource( 6 )
texture = ExtResource( 2 )

[node name="DustBurst" type="Particles2D" parent="."]
material = SubResource( 1 )
emitting = false
amount = 10
lifetime = 1.5
one_shot = true
explosiveness = 1.0
local_coords = false
process_material = SubResource( 9 )
texture = ExtResource( 2 )

[node name="CooldownTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="DurationTimer" to="." method="_on_DurationTimer_timeout"]
[connection signal="timeout" from="GhostTimer" to="." method="_on_GhostTimer_timeout"]
[connection signal="timeout" from="CooldownTimer" to="." method="_on_CooldownTimer_timeout"]
